--- a/DoubleLasso.ipynb
+++ b/DoubleLasso.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,17 +80,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['ln_export_area', 'colony0', 'colony1', 'colony3', 'colony4', 'colony7',\n",
-      "       'rain_min', 'ln_coastline_area', 'region_c', 'ln_avg_oil_pop',\n",
-      "       'ln_avg_all_diamonds_pop', 'ln_pop_dens_1400',\n",
-      "       'red_sea_distance_minimum'],\n",
+      "Index(['ln_export_area', 'colony0', 'colony3', 'colony4', 'colony5', 'colony6',\n",
+      "       'abs_latitude', 'rain_min', 'ln_coastline_area', 'islam', 'region_c',\n",
+      "       'ln_avg_oil_pop', 'ln_pop_dens_1400', 'saharan_distance_minimum',\n",
+      "       'red_sea_distance_minimum', 'ethnic_fractionalization', 'land_area'],\n",
       "      dtype='object')\n",
       "Index(['ln_export_pop', 'colony1', 'colony3', 'colony6', 'colony7', 'rain_min',\n",
       "       'low_temp', 'ln_coastline_area', 'island_dum', 'islam', 'region_n',\n",
@@ -98,18 +98,18 @@
       "       'ln_avg_all_diamonds_pop', 'ln_pop_dens_1400',\n",
       "       'saharan_distance_minimum', 'ethnic_fractionalization'],\n",
       "      dtype='object')\n",
-      "['colony0' 'colony1' 'colony3' 'colony4' 'colony6' 'colony7'\n",
-      " 'ethnic_fractionalization' 'islam' 'island_dum' 'ln_avg_all_diamonds_pop'\n",
-      " 'ln_avg_gold_pop' 'ln_avg_oil_pop' 'ln_coastline_area' 'ln_export_area'\n",
-      " 'ln_export_pop' 'ln_pop_dens_1400' 'low_temp' 'rain_min'\n",
-      " 'red_sea_distance_minimum' 'region_c' 'region_n' 'region_w'\n",
-      " 'saharan_distance_minimum']\n"
+      "['abs_latitude' 'colony0' 'colony1' 'colony3' 'colony4' 'colony5'\n",
+      " 'colony6' 'colony7' 'ethnic_fractionalization' 'islam' 'island_dum'\n",
+      " 'land_area' 'ln_avg_all_diamonds_pop' 'ln_avg_gold_pop' 'ln_avg_oil_pop'\n",
+      " 'ln_coastline_area' 'ln_export_area' 'ln_export_pop' 'ln_pop_dens_1400'\n",
+      " 'low_temp' 'rain_min' 'red_sea_distance_minimum' 'region_c' 'region_n'\n",
+      " 'region_w' 'saharan_distance_minimum']\n"
      ]
     }
    ],
    "source": [
     "# Define the dependent variable and instrumental variable\n",
-    "dependent_var = \"gdp00\"\n",
+    "dependent_var = \"ln_maddison_pcgdp2000\"\n",
     "endogeneous_var = \"ln_export_area\"\n",
     "\n",
     "# Separate the covariates and the dependent variable\n",
@@ -143,56 +143,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                            OLS Regression Results                            \n",
-      "==============================================================================\n",
-      "Dep. Variable:                  gdp00   R-squared:                       0.851\n",
-      "Model:                            OLS   Adj. R-squared:                  0.729\n",
-      "Method:                 Least Squares   F-statistic:                     6.973\n",
-      "Date:                Mon, 29 Apr 2024   Prob (F-statistic):           1.60e-06\n",
-      "Time:                        13:57:23   Log-Likelihood:                -24.223\n",
-      "No. Observations:                  52   AIC:                             96.45\n",
-      "Df Residuals:                      28   BIC:                             143.3\n",
-      "Df Model:                          23                                         \n",
-      "Covariance Type:            nonrobust                                         \n",
+      "                              OLS Regression Results                             \n",
+      "=================================================================================\n",
+      "Dep. Variable:     ln_maddison_pcgdp2000   R-squared:                       0.788\n",
+      "Model:                               OLS   Adj. R-squared:                  0.567\n",
+      "Method:                    Least Squares   F-statistic:                     3.568\n",
+      "Date:                   Fri, 03 May 2024   Prob (F-statistic):            0.00108\n",
+      "Time:                           18:10:58   Log-Likelihood:                -33.489\n",
+      "No. Observations:                     52   AIC:                             121.0\n",
+      "Df Residuals:                         25   BIC:                             173.7\n",
+      "Df Model:                             26                                         \n",
+      "Covariance Type:               nonrobust                                         \n",
       "============================================================================================\n",
       "                               coef    std err          t      P>|t|      [0.025      0.975]\n",
       "--------------------------------------------------------------------------------------------\n",
-      "const                        0.0158      0.095      0.166      0.869      -0.179       0.210\n",
-      "colony0                     -0.1620      0.100     -1.612      0.118      -0.368       0.044\n",
-      "colony1                      0.0714      0.136      0.524      0.605      -0.208       0.351\n",
-      "colony3                     -0.2161      0.098     -2.213      0.035      -0.416      -0.016\n",
-      "colony4                     -0.1412      0.133     -1.062      0.297      -0.413       0.131\n",
-      "colony6                     -0.0389      0.097     -0.399      0.693      -0.238       0.161\n",
-      "colony7                      0.0855      0.101      0.843      0.406      -0.122       0.293\n",
-      "ethnic_fractionalization    -0.0815      0.143     -0.571      0.573      -0.374       0.211\n",
-      "islam                       -0.2722      0.143     -1.908      0.067      -0.565       0.020\n",
-      "island_dum                  -0.2257      0.252     -0.895      0.378      -0.742       0.291\n",
-      "ln_avg_all_diamonds_pop      0.0812      0.148      0.548      0.588      -0.222       0.385\n",
-      "ln_avg_gold_pop             -0.0410      0.114     -0.359      0.722      -0.275       0.193\n",
-      "ln_avg_oil_pop               0.6093      0.142      4.305      0.000       0.319       0.899\n",
-      "ln_coastline_area            0.2949      0.152      1.945      0.062      -0.016       0.606\n",
-      "ln_export_area              -0.1295      0.743     -0.174      0.863      -1.652       1.393\n",
-      "ln_export_pop               -0.1847      0.718     -0.257      0.799      -1.655       1.286\n",
-      "ln_pop_dens_1400            -0.5115      0.271     -1.888      0.069      -1.067       0.043\n",
-      "low_temp                     0.1666      0.183      0.909      0.371      -0.209       0.542\n",
-      "rain_min                    -0.0017      0.007     -0.250      0.804      -0.016       0.012\n",
-      "red_sea_distance_minimum     0.4142      0.236      1.752      0.091      -0.070       0.898\n",
-      "region_c                    -0.4583      0.209     -2.192      0.037      -0.887      -0.030\n",
-      "region_n                    -0.3212      0.268     -1.200      0.240      -0.869       0.227\n",
-      "region_w                    -0.4559      0.324     -1.405      0.171      -1.120       0.209\n",
-      "saharan_distance_minimum    -0.4953      0.299     -1.654      0.109      -1.109       0.118\n",
+      "const                        0.0736      0.128      0.575      0.570      -0.190       0.337\n",
+      "abs_latitude                 0.1042      0.336      0.310      0.759      -0.588       0.797\n",
+      "colony0                     -0.0842      0.128     -0.656      0.518      -0.349       0.180\n",
+      "colony1                      0.0038      0.179      0.021      0.983      -0.365       0.373\n",
+      "colony3                     -0.1728      0.133     -1.299      0.206      -0.447       0.101\n",
+      "colony4                     -0.1466      0.223     -0.658      0.517      -0.606       0.312\n",
+      "colony5                      0.1399      0.166      0.841      0.408      -0.203       0.483\n",
+      "colony6                      0.0321      0.125      0.257      0.799      -0.225       0.289\n",
+      "colony7                     -0.1157      0.145     -0.799      0.432      -0.414       0.182\n",
+      "ethnic_fractionalization    -0.0327      0.229     -0.143      0.887      -0.503       0.438\n",
+      "islam                       -0.2818      0.204     -1.379      0.180      -0.703       0.139\n",
+      "island_dum                  -0.0534      0.393     -0.136      0.893      -0.864       0.757\n",
+      "land_area                   -0.2037      0.269     -0.756      0.457      -0.759       0.351\n",
+      "ln_avg_all_diamonds_pop     -0.0518      0.226     -0.229      0.821      -0.517       0.413\n",
+      "ln_avg_gold_pop              0.0387      0.147      0.264      0.794      -0.263       0.341\n",
+      "ln_avg_oil_pop               0.5752      0.203      2.831      0.009       0.157       0.994\n",
+      "ln_coastline_area            0.2237      0.208      1.074      0.293      -0.205       0.652\n",
+      "ln_export_area              -0.0402      1.030     -0.039      0.969      -2.162       2.082\n",
+      "ln_export_pop               -0.2572      1.032     -0.249      0.805      -2.383       1.869\n",
+      "ln_pop_dens_1400            -0.3279      0.401     -0.818      0.421      -1.153       0.498\n",
+      "low_temp                    -0.0449      0.286     -0.157      0.876      -0.633       0.544\n",
+      "rain_min                    -0.0083      0.010     -0.832      0.413      -0.029       0.012\n",
+      "red_sea_distance_minimum     0.2212      0.319      0.693      0.495      -0.436       0.878\n",
+      "region_c                    -0.3729      0.282     -1.323      0.198      -0.954       0.208\n",
+      "region_n                    -0.1188      0.389     -0.305      0.763      -0.920       0.682\n",
+      "region_w                    -0.2578      0.413     -0.625      0.538      -1.108       0.592\n",
+      "saharan_distance_minimum    -0.2410      0.429     -0.562      0.579      -1.125       0.643\n",
       "==============================================================================\n",
-      "Omnibus:                        0.477   Durbin-Watson:                   2.025\n",
-      "Prob(Omnibus):                  0.788   Jarque-Bera (JB):                0.603\n",
-      "Skew:                          -0.016   Prob(JB):                        0.740\n",
-      "Kurtosis:                       2.473   Cond. No.                         264.\n",
+      "Omnibus:                        2.005   Durbin-Watson:                   1.831\n",
+      "Prob(Omnibus):                  0.367   Jarque-Bera (JB):                1.224\n",
+      "Skew:                          -0.068   Prob(JB):                        0.542\n",
+      "Kurtosis:                       3.739   Cond. No.                         298.\n",
       "==============================================================================\n",
       "\n",
       "Notes:\n",
@@ -221,34 +224,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                          IV2SLS Regression Results                           \n",
-      "==============================================================================\n",
-      "Dep. Variable:                  gdp00   R-squared:                       0.224\n",
-      "Model:                         IV2SLS   Adj. R-squared:                  0.208\n",
-      "Method:                     Two Stage   F-statistic:                     14.46\n",
-      "                        Least Squares   Prob (F-statistic):           0.000391\n",
-      "Date:                Mon, 29 Apr 2024                                         \n",
-      "Time:                        13:57:30                                         \n",
-      "No. Observations:                  52                                         \n",
-      "Df Residuals:                      50                                         \n",
-      "Df Model:                           1                                         \n",
+      "                            IV2SLS Regression Results                            \n",
+      "=================================================================================\n",
+      "Dep. Variable:     ln_maddison_pcgdp2000   R-squared:                       0.302\n",
+      "Model:                            IV2SLS   Adj. R-squared:                  0.288\n",
+      "Method:                        Two Stage   F-statistic:                     22.11\n",
+      "                           Least Squares   Prob (F-statistic):           2.06e-05\n",
+      "Date:                   Fri, 03 May 2024                                         \n",
+      "Time:                           18:11:01                                         \n",
+      "No. Observations:                     52                                         \n",
+      "Df Residuals:                         50                                         \n",
+      "Df Model:                              1                                         \n",
       "==================================================================================\n",
       "                     coef    std err          t      P>|t|      [0.025      0.975]\n",
       "----------------------------------------------------------------------------------\n",
-      "const             -0.0226      0.194     -0.116      0.908      -0.413       0.368\n",
-      "ln_export_area    -0.4737      0.125     -3.802      0.000      -0.724      -0.223\n",
+      "const             -0.0793      0.170     -0.466      0.643      -0.421       0.263\n",
+      "ln_export_area    -0.5555      0.118     -4.702      0.000      -0.793      -0.318\n",
       "==============================================================================\n",
-      "Omnibus:                        0.617   Durbin-Watson:                   2.733\n",
-      "Prob(Omnibus):                  0.734   Jarque-Bera (JB):                0.537\n",
-      "Skew:                           0.238   Prob(JB):                        0.764\n",
-      "Kurtosis:                       2.852   Cond. No.                         1.00\n",
+      "Omnibus:                        0.206   Durbin-Watson:                   2.450\n",
+      "Prob(Omnibus):                  0.902   Jarque-Bera (JB):                0.407\n",
+      "Skew:                           0.022   Prob(JB):                        0.816\n",
+      "Kurtosis:                       2.569   Cond. No.                         1.00\n",
       "==============================================================================\n"
      ]
     }
